--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^12.12.58",
+    "ts-loader": "^8.0.3",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
-      "dev": "ts-node src/index.ts",
-      "dev:watch": "ts-node-dev --respawn src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "dev:watch": "ts-node-dev --respawn src/index.ts",
+    "build": "webpack",
+    "build:w": "webpack -w"
   },
   "repository": {
     "type": "git",
